# UL2_5

./: .gitignore  README.md  benchmark_ul2_5.py  pyproject.toml  requirements.txt  ul2_5_hf.py  ul2_5_torch.py
src/UL2_5/: __init__.py  collator_hf.py  collator_torch.py  config.py  masking.py  sentinel.py  unpad.py
tests/: conftest.py  test_collator.py  test_config.py  test_masking.py  test_paper_compliance.py  test_sentinel.py  test_unpad.py
